--- a/homepage.html
+++ b/homepage.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -7,20 +7,57 @@
 
     <!-- Bootstrap CSS -->
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style1.css">
 
-    <title>Hello, world!</title>
+
+    <title>Login</title>
   </head>
   <body>
+   
       <header>
           <!-- Only for header -->
+          <nav class="navbar navbar-light">
+          <!-- icon -->
+     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-bootstrap" viewBox="0 0 16 16">
+      <path d="M5.062 12h3.475c1.804 0 2.888-.908 2.888-2.396 0-1.102-.761-1.916-1.904-2.034v-.1c.832-.14 1.482-.93 1.482-1.816 0-1.3-.955-2.11-2.542-2.11H5.062V12zm1.313-4.875V4.658h1.78c.973 0 1.542.457 1.542 1.237 0 .802-.604 1.23-1.764 1.23H6.375zm0 3.762V8.162h1.822c1.236 0 1.887.463 1.887 1.348 0 .896-.627 1.377-1.811 1.377H6.375z"/>
+      <path d="M0 4a4 4 0 0 1 4-4h8a4 4 0 0 1 4 4v8a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V4zm4-3a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h8a3 3 0 0 0 3-3V4a3 3 0 0 0-3-3H4z"/>
+     </svg>
+          <!-- searchbar -->
+          <form class="d-flex">
+          <input type="search" name="searchbar" class="form-control me-5" placeholder="Search">
+          </form>
+          </nav>
       </header>
       <main>
-        <h1>Hello, world!</h1>
         <!-- For main container, splitted by <section> tag -->
+          <!-- img circle-->
+          <div class="mb-3">
+        <svg xmlns="http://www.w3.org/2000/svg" width="150px" height="150px" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+           <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+         <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+         </svg>
+          </div>
+          
+          <form action="homepage2.html">
+          <div class="mb-2"> 
+          <input type="text" class="form-control" name="user" placeholder="User Name">
+          </div>
+          <div class="mb-2"> 
+          <input type="password" class="form-control" name="password" placeholder="Password">
+          </div>
+          <div class="mb-2"> 
+          <input type="checkbox" class="form-check-label"name="check">Remember me
+          </div>
+          <div class="mb-2"> 
+          <input type="submit" name="submit" value="Login" class="btn btn-primary">
+          </div>
+        </form>
+
       </main>
       <footer>
           <!-- Only for footer -->
       </footer>
+
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
